--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "frontend",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.14",
-    "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query": "^5.71.5",
+    "add": "^2.0.6",
     "axios": "^1.8.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.4.1",
     "react-textarea-autosize": "^8.5.8",
     "tailwindcss": "^4.0.14"
   },
