--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "NestJS-Simple-TODO-List",
-  "packageManager": "yarn@4.7.0",
+  "packageManager": "yarn@4.8.1",
+  "private": true,
   "devDependencies": {
     "typescript": "^5.8.2"
   },
