--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.71.5",
     "add": "^2.0.6",
     "axios": "^1.8.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.4.1",
     "react-textarea-autosize": "^8.5.8",
     "tailwindcss": "^4.0.14"
